Small fix on mobile

--- a/client/static/css/mobile.css
+++ b/client/static/css/mobile.css
@@ -39,3 +39,56 @@ input[type=submit] {
   border: none;
   text-align: center;
 }
+
+button {
+  background-color: white;
+}
+
+/* Search Home */
+
+.searchTitle, .searchContent {
+  width: 100%;
+}
+.searchItem {
+  flex-direction: column;
+}
+/*
+.search {
+  margin-top: 15px;
+  background-color: lightgrey;
+  padding: 15px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+.searchItem {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5px;
+}
+.searchTitle {
+  background-color: grey;
+  padding: 10px;
+  flex-basis: 25%;
+}
+.searchContent {
+  background-color: white;
+  padding: 10px;
+  flex-grow: 1;
+}
+.searchElement {
+  border: solid 1px lightgrey;
+  margin: 2px;
+  padding: 5px;
+}
+.searchElement:hover {
+  background-color: rgba(227, 242, 253, 0.5);
+}
+.searchInterests {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}*/
